Fix dark mode toggle on OS'es with dark mode as preferred mode

--- a/source/stylesheets/components/dark-mode.scss
+++ b/source/stylesheets/components/dark-mode.scss
@@ -427,7 +427,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  body{
+  body:not(.light-mode){
     @include dark-mode();
   }
 }
